Added Info on Notebooks

--- a/notebooks/02_data_exploration.ipynb
+++ b/notebooks/02_data_exploration.ipynb
@@ -116,20 +116,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Central Tendency: Mean, Median, Mode\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Spread: Range, Interquartile Range, Standard Deviation, Variance\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "## Central Tendency: Mean, Median, Mode\n",
+    "\n",
+    "## Spread: Range, Interquartile Range, Standard Deviation, Variance\n",
+    "\n",
     "## Outliers\n"
    ]
   },
